cabal-version:      3.0
name:               bm
version:            0.3.0.0
synopsis:           open bookmarks and queries from the command line
description:
  This package provides a command-line utility that opens bookmarks and
  queries.  Please see the README on GitHub at
  <https://github.com/ExtremaIS/bm-haskell#readme>.
homepage:           https://github.com/ExtremaIS/bm-haskell#readme
bug-reports:        https://github.com/ExtremaIS/bm-haskell/issues
license:            MIT
license-file:       LICENSE
author:             Travis Cardwell <travis.cardwell@extrema.is>
maintainer:         Travis Cardwell <travis.cardwell@extrema.is>
copyright:          Copyright (c) 2021-2026 Travis Cardwell
category:           Utils
build-type:         Simple

extra-doc-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.4
   || ==9.14.1

source-repository head
  type: git
  location: https://github.com/ExtremaIS/bm-haskell.git

flag optparse-applicative_ge_0_18
  description: Use optparse-applicative 0.18 or newer
  default: True
  manual: False

library
  hs-source-dirs: src
  exposed-modules:
      BM
  other-modules:
      Paths_bm
  autogen-modules:
      Paths_bm
  build-depends:
      aeson >=1.4.7.1 && < 2.4
    , base >=4.13.0.0 && <4.23
    , dlist >=0.8.0.8 && <1.1
    , network-uri >=2.6.3.0 && <2.7
    , scientific >=0.3.6.2 && <0.4
    , text >=1.2.4.0 && <2.2
    , transformers >=0.5.6.2 && <0.7
    , vector >=0.12.1.2 && <0.14
  default-language: Haskell2010
  default-extensions:
      OverloadedStrings
  ghc-options: -Wall

executable bm
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
      LibOA
  build-depends:
      base
    , bm
    , directory >=1.3.6.0 && <1.4
    , filepath >=1.4.2.1 && <1.6
    , typed-process >=0.2.6.0 && <0.3
    , yaml >=0.11.5.0 && <0.12
  if flag(optparse-applicative_ge_0_18)
    build-depends:
        optparse-applicative >=0.18 && <0.20
      , prettyprinter >=1.7.1 && <1.8
  else
    build-depends:
        ansi-wl-pprint >=0.6.9 && <1.1
      , optparse-applicative >=0.15.1.0 && <0.18
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite bm-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
      BM.Test
  build-depends:
      base
    , bm
    , tasty >=1.2.3 && <1.6
    , tasty-hunit >=0.10.0.3 && <0.11
    , vector
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
